--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
 	},
 	"dependencies": {
 		"express": "4.13.x",
-		"cfenv": "1.0.x"
+		"cfenv": "1.0.x",
+		"async": "^1.5.1",
+		"body-parser": "~1.15.1",
+		"dotenv": "^2.0.0",
+		"errorhandler": "~1.4.1",
+		"express-secure-only": "^0.2.1",
+		"request": "^2.67.0",
+		"vcap_services": "^0.2.0",
+		"watson-developer-cloud": "~1.12.2"
 	},
 	"repository": {},
 	"engines": {
